<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alignmentMode="alignMargins"
                    android:columnCount="2"
                    android:columnOrderPreserved="false"
                    android:rowCount="5">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/add_doctor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:background="@color/cardview_light_background"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/doctor" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/new_doctor"
                                android:textSize="18sp"
                                app:fontFamily="@font/antic" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/new_patient"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:background="@color/cardview_light_background"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/dentist" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/new_patient"
                                android:textSize="18sp"
                                app:fontFamily="@font/antic" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/to_do_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:background="@color/cardview_light_background"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/to_do_list" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/todo"
                                android:textSize="18sp"
                                app:fontFamily="@font/antic" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/clinic_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:background="@color/cardview_light_background"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/teamwork" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/clinic_info"
                                android:textSize="18sp"
                                app:fontFamily="@font/antic" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/appoinments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:background="@color/cardview_light_background"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/medical_appointment" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/appoinment"
                                android:textSize="18sp"
                                app:fontFamily="@font/antic" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/patient_file"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:background="@color/cardview_light_background"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/magnifying_glass" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/patient_file"
                                android:textSize="18sp"
                                app:fontFamily="@font/antic" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/pickets_data"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:background="@color/cardview_light_background"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/exchange" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/picker_data"
                                android:textSize="18sp"
                                app:fontFamily="@font/antic" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/doctor_details"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:background="@color/cardview_light_background"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/folder" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/doctor_details"
                                android:textSize="18sp"
                                app:fontFamily="@font/antic" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/accounting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="12dp"
                        android:background="@color/cardview_light_background"
                        app:cardCornerRadius="12dp"
                        app:cardElevation="6dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="16dp">

                            <ImageView
                                android:layout_width="80dp"
                                android:layout_height="80dp"
                                android:src="@drawable/tablet" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="12dp"
                                android:text="@string/accounts"
                                android:textSize="18sp"
                                app:fontFamily="@font/antic" />

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </GridLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>