<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".add_operation" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="@drawable/linearbackground"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/op_title"
            android:textSize="23sp"
            app:fontFamily="@font/cantata_one" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:hint=" Date"
                app:boxBackgroundColor="@color/colorBox"
                app:boxBackgroundMode="filled"
                app:boxCollapsedPaddingTop="12dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/opDate"
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:background="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:hint=" Descrption"
                app:boxBackgroundColor="@color/colorBox"
                app:boxBackgroundMode="filled"
                app:boxCollapsedPaddingTop="12dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:background="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint=" Price"
                app:boxBackgroundColor="@color/colorBox"
                app:boxBackgroundMode="filled"
                app:boxCollapsedPaddingTop="12dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:background="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint=" Treated By"
                app:boxBackgroundColor="@color/colorBox"
                app:boxBackgroundMode="filled"
                app:boxCollapsedPaddingTop="12dp"
                app:boxCornerRadiusBottomEnd="12dp"
                app:boxCornerRadiusBottomStart="12dp"
                app:boxCornerRadiusTopEnd="12dp"
                app:boxCornerRadiusTopStart="12dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="61dp"
                    android:background="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    style="Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint=" Tooth"
                    app:boxBackgroundColor="@color/colorBox"
                    app:boxBackgroundMode="filled"
                    app:boxCollapsedPaddingTop="12dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="59dp"
                        android:background="@null" />

                    <Button
                        android:id="@+id/imageBtn"
                        android:layout_width="62dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="279dp"
                        android:layout_marginRight="279dp"
                        android:layout_weight="1"
                        android:background="@android:color/holo_blue_light"
                        android:text="@string/btn_tooth" />

                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <Button
                android:id="@+id/add_operation"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/colorButton"
                android:text="@string/btn_op_add" />

            <Button
                android:id="@+id/all_operations"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/colorButton"
                android:text="@string/btn_op_allDetails" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>